# pyxelate-to-color

./: .gitignore  AGENTS.md  database.py  fix_metadata.py  index.py  main.py  metadata.py  migrate_data.py  models.py  processed_images_metadata.json  pyproject.toml  utils.py
templates/: error.html  gallery.html  image_detail.html  index.html  results.html
