[project]
name = "pyxelate-to-color"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "marimo[recommended]>=0.14.10",
    "matplotlib>=3.10.3",
    "pillow>=11.3.0",
    "pyxelate",
        "watchdog>=6.0.0",
        "ruff>=0.0.0",]

[tool.uv.sources]
pyxelate = { git = "https://github.com/sedthh/pyxelate.git" }

[tool.marimo.runtime]
watcher_on_save = "autorun"
